--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<budy>
+<head>
 
-<h1>My First Heading</h1>
+<title>MIN_CHIEN HO</title>
+</head>
+<body>
 
-<p>My first paragraph</p>
+<h1>MIN_CHIEN HO</h1>
+
+<p>1123515</p>
 
 </body>
 </html>
