--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 
-<title>MIN_CHIEN HO</title>
+<title>MIN-CHIEN HO</title>
 </head>
 <body>
 
-<h1>MIN_CHIEN HO</h1>
+<h1>MIN-CHIEN HO</h1>
 
 <p>1123515</p>
 
